--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -115,6 +115,15 @@ isbn = {978-3-8274-2347-4},
 language = {ngerman}
 }
 
+@book{Gluchowski,
+author = {Gluchowski, Peter and Gabriel, Roland and Dittmar, Carsten},
+title = {Management Support Systeme und Business Intelligence},
+publisher = {Springer},
+year = {2008},
+isbn = {978-3-540-68269-1},
+language = {ngerman}
+}
+
 @book{Tetlock,
 author = {Tetlock, Philip},
 title = {Expert Political Judgment - How good is it? How can we know?},
