--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -96,8 +96,14 @@ Damit kann \emph{predictive analytics}, ähnlich wie bei \emph{business
 analytics}, als ein Bestandteil von \emph{business intelligence} eingeordnet
 werden (vgl. \cite{Gluchowski}, S.~92). 
 
-%Aufgrund der Ähnlichkeit und der gegenseitigen Abhängigkeit der Begriffe,
-%besteht die Gefahr... 
+Aufgrund der Ähnlichkeit und der gegenseitigen Abhängigkeit der obigen Begriffe,
+besteht Verwechslungsgefahr. Allerdings sollte dies in der Praxis eher selten
+einen bedeutenden Unterschied machen.
+
+Ein in diesem Zusammenhang weniger verbreiteter Begriff ist \emph{forecasting},
+die Erstellung von Prognosen durch menschliche Beobachter. Im nächsten Abschnitt
+wird diese Form von Vorhersagen genauer beschrieben und anschließend mit
+\emph{predictive analytics} verglichen.  
 
 \section{Probleme menschlicher Urteile}
 
