'Spiel gegen die Natur' definiert

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -194,6 +194,10 @@ citecolor=MidnightBlue }
 
 \subsection{Eine pessimistische Sichtweise}
 
+Je mehr das Treffen von Entscheidungen zur Hauptaufgabe von Personen gehört,
+desto stärker betrachten sie \emph{predictive analytics} als eine Gefahr für
+ihren Arbeitsplatz.
+
 Es gibt Stimmen, die behaupten, dass ein immenser Widerstand gegen die
 Einführung solcher Methoden [Forecasting + Predictive Analytics] zu erwarten
 ist. Teilweise deutet sich sogar eine Unmöglichkeit dieser Aufgabe an. Beim 
@@ -207,16 +211,28 @@ Auffassung (vgl. \cite{Jackson}, S.~295).
 % Thapa_Parycek S. 46
 \subsection{Eine optimistische Sichtweise}
 
-Bessere Prognosen führen zu besseren Entscheidungen. Dies bringt wiederum
-sowohl Vorteile gegenüber Konkurrenten als auch
-\glqq{gegen die Natur}\grqq\footnote{
-Wenn sich beispielsweise viele Menschen gegen das Rauchen entscheiden, gibt es
-eine gesündere Bevölkerung; entscheidet man sich für eine bessere
-Behandlungsmethode in der Medizin, können mehr Menschen geheilt werden\ldots
+Bessere Prognosen und Urteile führen zu besseren Entscheidungen. Dies bringt
+wiederum sowohl Vorteile gegenüber Konkurrenten als auch Vorteile bei der
+Auseinandersetzung mit der \glqq{Natur}\grqq\footnote{
+Genauer: Bei der Auseinandersetzung mit den Zwängen, die durch die Naturgesetze
+und ökonomische Prinzipien definiert werden. Verzichtet man zum Beispiel auf das 
+Rauchen kann es als eine gute Entscheidung betrachtet werden, da man dadurch
+gesünder lebt. Hierfür muss zunächst erkannt werden, dass Rauchen ungesund ist.
+Klingt heute einfach. Diese Erkenntnis zu erlangen war jedoch mit erheblichem
+Aufwand verbunden, wobei auch wissenschaftliche und statistische Methoden
+eine große Rolle spielten (vgl. zum Beispiel \cite{Proctor}).
+
+Ein weiteres Beispiel für eine Entscheidung, die nicht in erster Linie Vorteile
+gegenüber Konkurrenten verspricht, ist eine Entscheidung für eine bessere
+Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist, die 
+Möglichkeit zu erlangen, mehr Menschen zu heilen.
 }
 
 \section{Spieltheoretische Betrachtung}
 
+Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
+\emph{forecasting} oder \emph{predictive analytics}, bietet es sich an, die
+\gls{glos:Spieltheorie} anzuwenden.
 % TODO
 
 
