--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -133,6 +133,15 @@ isbn = {978-0-691-12871-9},
 language = {english}
 }
 
+@book{Proctor,
+author = {Proctor, Robert},
+title = {The Nazi War on Cancer},
+publisher = {Princeton University Press},
+year = {1999},
+isbn = {0-691-07051-2},
+language = {english}
+}
+
 @misc{Schmitz,
 author = {Schmitz, Andreas},
 title = {Predictive Analytics: 7 praktische Beispiele},
