--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -37,6 +37,11 @@ Unterstützung der Entscheidungsfindung}
 }
 
 \newglossaryentry
+{glos:Spieltheorie}{name=Spieltheorie, description=
+{kommt noch...}
+}
+
+\newglossaryentry
 {glos:PCA}{name=Primary Component Analysis, description=
 {Eine Methode zur Variablenreduktion. Dabei wird ein neuer Satz von
 Basisvektoren berechnet, der die Varianz der Daten am Besten beschreibt}
