--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -71,14 +71,13 @@ explizit die Erstellung von Vorhersagen im Vordergrund.
 großen und komplexen Datenbeständen arbeitet. Das Ziel von \emph{data science}
 ist die Entwicklung von Algorithmen und Werkzeugen, die in der Lage sind, diese
 Datenbestände zu nutzen, um Systeme zur Entscheidungsunterstützung zu
-implementieren (\emph{semiautomated decision support systems}). (vgl.
-\cite{Dinov}, S.~9)
+implementieren (\emph{semiautomated decision support systems}) (vgl.
+\cite{Dinov}, S.~9).  Im Gegensatz zu \emph{predictive analytics} steht bei 
+\emph{data science} eher die Entwicklung von Algorithmen im Vordergrund. 
+Bei \emph{predictive analytics} hingegen steht die Anwendung dieser Methoden im 
+Fokus.
 
-Im Gegensatz zu \emph{predictive analytics} steht bei \emph{data science} eher
-die Entwicklung von Algorithmen im Vordergrund. Bei \emph{predictive analytics}
-hingegen steht die Anwendung dieser Methoden im Fokus.
-
-\emph{Business analytics} wir als Oberbegriff für Prozesse gesehen, die
+\emph{Business analytics} wird als Oberbegriff für Prozesse definiert, die
 Analysemodelle im geschäftlichen Kontext erstellen . \emph{Predictive analytics}
 und \emph{data mining} werden dann als Bestandteil von \emph{business analytics}
 gesehen. (vgl. \cite{McCarthy}, S.~6))
@@ -90,15 +89,9 @@ Einsichten genutzt werden\footnote{
 Manche Autoren betrachten den Begriff \emph{intelligence} als Anspielung auf die
 gängige, englische Bezeichung für Aufklärungs- und Nachrichtendienste, wie
 beispielsweise die CIA.
-}. (vgl. \cite{Gluchowski}, S.~89-90) 
-
-Damit kann \emph{predictive analytics}, ähnlich wie bei \emph{business
-analytics}, als ein Bestandteil von \emph{business intelligence} eingeordnet
-werden (vgl. \cite{Gluchowski}, S.~92). 
-
-Aufgrund der Ähnlichkeit und der gegenseitigen Abhängigkeit der obigen Begriffe,
-besteht Verwechslungsgefahr. Allerdings sollte dies in der Praxis eher selten
-einen bedeutenden Unterschied machen.
+} (vgl. \cite{Gluchowski}, S.~89-90). Damit kann \emph{predictive analytics},
+ähnlich wie bei \emph{business analytics}, als ein Bestandteil von 
+\emph{business intelligence} eingeordnet werden (vgl. \cite{Gluchowski}, S.~92). 
 
 Ein in diesem Zusammenhang weniger verbreiteter Begriff ist \emph{forecasting},
 die Erstellung von Prognosen durch menschliche Beobachter. Im nächsten Abschnitt
@@ -367,12 +360,17 @@ Modell in Abbildung~\ref{pic:Tetlock_2} bezeichnet.
  
 \subsection{Gründe für die schlechte Leistung der Experten}
 
-% (vgl. \cite{Tetlock}, S.~XXX)
 
-Die Fähigkeit, mit wenigen Grundregeln oder Axiomen auszukommen, die in der
-Wissenschaft geschätzt wird, scheint sich in eine Schwäche zu verwandeln, wenn
+
+Die in der Wissenschaft geschätzte Fähigkeit, mit wenigen Grundregeln oder
+Axiomen auszukommen, scheint sich in eine Schwäche zu verwandeln, wenn
 es darum geht, Prognosen für die reale Welt zu erstellen (vgl. \cite{Tetlock},
 S.~68).
+
+Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
+lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
+Arbeit bestätigt.
+
 
 %-------------------------------------------------------------------------------
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
@@ -420,10 +418,6 @@ Bedauerlicherweise gerät ein solcher Pragmatismus mit jeder, insbesondere
 politischen, Weltanschauung in Konflikt, die selbst nicht in dieser Art
 pragmatisch ist.
 %-------------------------------------------------------------------------------
-Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
-lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
-Arbeit bestätigt.
-
 
 \begin{table}
 \centering
