--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -142,6 +142,14 @@ isbn = {0-691-07051-2},
 language = {english}
 }
 
+@book{crispdm,
+author = {Chapman, Pete and Clinton, Julian and Kerber, Randy and Khabaza, Thomas and Reinartz, Thomas and Shearer, Colin and Wirth, Rüdiger},
+title = {CRISP-DM 1.0 - Step-by-step data mining guide},
+publisher = {SPSS},
+year = {2000},
+language = {english}
+}
+
 @misc{Schmitz,
 author = {Schmitz, Andreas},
 title = {Predictive Analytics: 7 praktische Beispiele},
