Predictive Policing Prozess hinzugefügt

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -51,8 +51,10 @@ includehead,includefoot}}
 % Deutsche und englische Referenzen
 \usepackage{babelbib}
 
-% Utopia Schriftart
-\usepackage{utopia}
+% Utopia Schriftart (obsolet)
+%\usepackage{utopia}
+% jetzt... 
+\usepackage{fourier}
 
 % Farbige Überschriften
 % https://www.overleaf.com/learn/latex/Using_colours_in_LaTeX
@@ -233,6 +235,8 @@ Möglichkeit zu erlangen, mehr Menschen zu heilen.
 Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \emph{forecasting} oder \emph{predictive analytics}, bietet es sich an, die
 \gls{glos:Spieltheorie} anzuwenden.
+
+\subsection{Einleitung zur Spieltheorie}
 % TODO
 
 
@@ -293,6 +297,15 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 % Einschätzung der politischen Stimmungslage
 % Vorhersage kultureller Unterschiede
 
+\subsubsection{Predictive Policing}
+
+\begin{figure}%[!hbt]
+\centering
+\caption{Predictive Policing Prozess}
+\includegraphics[scale=1.1]{Grafiken/Predictive_Policing_Ink.pdf} 
+\label{pic:Predictive_Policing}
+\end{figure}
+
 \subsubsection{Cambridge Analytica - Fallstudie}
 
 \begin{figure}%[!hbt]
@@ -346,6 +359,11 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 % R Verwendung in Verwaltungen
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% TODO Bilder
+% PA Schaubild
+% Dataframe beispiel
+% Predictive Policing Schaubild
+
 % TODO vllt Zusatzmaterial:
 
 % Tetlock S. 63: systematic distortions in the media markets for intellectual
