--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -235,7 +235,7 @@ language = {english}
 
 @article{Jackson,
 author = {Jackson, Alexander and Reichin, Sydney},
-title = {Superforecasting: the art and science of prediction - Review},
+title = {Superforecasting: the art and science of prediction - {Review}},
 journal = {Personnel Psychology},
 volume = {71},
 number = {2},
