--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -737,7 +737,7 @@ werden nun erläutert.
 Die Ergebnisse von Vorhersagen werden von Menschen interpretiert,
 die daraufhin ihr Verhalten anpassen. Dies kann zu Rückkopplungseffekten führen,
 die von negativen Auswirkungen im Sinne einer
-\glqq{Selffulfilling} Prophecy\grqq begleitet werden können
+\glqq{Selffulfilling} Prophecy\grqq{} begleitet werden können
 (vgl. \cite{Crossman}). Bestimmte Prognosen können beispielsweise von einer 
 Interessengruppe als Bestätigung ihrer Agenda interpretiert werden, wobei
 anders lautende Vorhersagen ignoriert werden. Dadurch bestärkt, setzt die Gruppe
