Umstellung Schreibweise engl. Begriffe

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -259,7 +259,7 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 % mixed
 \begin{figure}%[!hbt]
 \centering
-\caption{Gemischte Stag Hunt-Deadlock Auszahlungsmatrix}
+\caption{Gemischte 'Stag Hunt - Deadlock' Auszahlungsmatrix}
 \includegraphics[scale=0.7]{Grafiken/Mixed_Ink.pdf} 
 \label{pic:Mixed}
 \end{figure}
@@ -298,6 +298,8 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 % Vorhersage kultureller Unterschiede
 
 \subsubsection{Predictive Policing}
+
+Grafik aus \cite{Bode}, S.~2.
 
 \begin{figure}%[!hbt]
 \centering
