--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -256,3 +256,12 @@ year = {2016},
 url = {https://doi.org/10.3390/risks4030024},
 language = {english}
 }
+
+@techreport{Bode,
+author={Bode, Felix and Stoffel, Florian and Keim, Daniel},
+title={Variabilität und Validität von Qualitätsmetriken im Bereich von Predictive Policing},
+year={2017},
+institution = {Universität Konstanz},
+url = {http://nbn-resolving.de/urn:nbn:de:bsz:352-0-402496},
+language = {ngerman}
+}
