--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -58,48 +58,48 @@ handelt.
 
 \section{Begriffsabgrenzung}
 
-Unter \emph{data mining} versteht man das Nutzen von statistischen Methoden zur
+Unter Data Mining versteht man das Nutzen von statistischen Methoden zur
 Analyse großer Datenmengen mit dem Ziel, neue Erkenntnisse zum untersuchten 
 Thema oder Objekt zu erlangen\footnote{
-Der Begriff \emph{data mining} ist also nicht wörtlich zu verstehen. Gemeint ist
+Der Begriff Data mining ist also nicht wörtlich zu verstehen. Gemeint ist
 nicht die Gewinnung von Daten, sondern die Gewinnung von Erkenntnissen aus den
 Daten.
 }
 (vgl. \cite{McCarthy}, S.~6). Es bestehen große Schnittmengen mit
-\emph{predictive analytics}, insbesondere im Hinblick auf die Nutzung der
-gleichen Methoden und Werkzeuge. Allerdings steht bei \emph{data mining} nicht
+Predictive Analytics, insbesondere im Hinblick auf die Nutzung der
+gleichen Methoden und Werkzeuge. Allerdings steht bei Data Mining nicht
 explizit die Erstellung von Vorhersagen im Vordergrund.
 
-\emph{Data science} kann als interdisziplinäres Feld verstanden werden, das mit
-großen und komplexen Datenbeständen arbeitet. Das Ziel von \emph{data science}
+Data Science kann als interdisziplinäres Feld verstanden werden, das mit
+großen und komplexen Datenbeständen arbeitet. Das Ziel von Data Science
 ist die Entwicklung von Algorithmen und Werkzeugen, die in der Lage sind, diese
 Datenbestände zu nutzen, um Systeme zur Entscheidungsunterstützung zu
 implementieren (\emph{semiautomated decision support systems}) (vgl.
-\cite{Dinov}, S.~9).  Im Gegensatz zu \emph{predictive analytics} steht bei 
-\emph{data science} eher die Entwicklung von Algorithmen im Vordergrund. 
-Bei \emph{predictive analytics} hingegen steht die Anwendung dieser Methoden im 
+\cite{Dinov}, S.~9).  Im Gegensatz zu Predictive Analytics steht bei 
+Data Science eher die Entwicklung von Algorithmen im Vordergrund. 
+Bei Predictive Analytics hingegen steht die Anwendung dieser Methoden im 
 Fokus.
 
-\emph{Business analytics} wird als Oberbegriff für Prozesse definiert, die
-Analysemodelle im geschäftlichen Kontext erstellen . \emph{Predictive analytics}
-und \emph{data mining} werden dann als Bestandteil von \emph{business analytics}
+Business Analytics wird als Oberbegriff für Prozesse definiert, die
+Analysemodelle im geschäftlichen Kontext erstellen . Predictive Analytics
+und Data Mining werden dann als Bestandteil von Business Analytics
 gesehen. (vgl. \cite{McCarthy}, S.~6))
 
-\emph{Business intelligence} ist ein zu \emph{business analytics} ähnlicher
+Business Intelligence ist ein zu Business Analytics ähnlicher
 Begriff und steht allgemein für Anwendungen und Techniken, die im
 Geschäftsumfeld zur Entscheidungsunterstützung und zur Generierung von
 Einsichten genutzt werden\footnote{
-Manche Autoren betrachten den Begriff \emph{intelligence} als Anspielung auf die
-gängige, englische Bezeichung für Aufklärungs- und Nachrichtendienste, wie
-beispielsweise die CIA.
-} (vgl. \cite{Gluchowski}, S.~89-90). Damit kann \emph{predictive analytics},
-ähnlich wie bei \emph{business analytics}, als ein Bestandteil von 
-\emph{business intelligence} eingeordnet werden (vgl. \cite{Gluchowski}, S.~92). 
+Manche Autoren betrachten den Begriff \glqq{Intelligence}\grqq{} als Anspielung
+auf die gängige, englische Bezeichung für Aufklärungs- und Nachrichtendienste,
+wie beispielsweise die CIA.
+} (vgl. \cite{Gluchowski}, S.~89-90). Damit kann Predictive Analytics,
+ähnlich wie bei Business Analytics, als ein Bestandteil von 
+Business Intelligence eingeordnet werden (vgl. \cite{Gluchowski}, S.~92). 
 
-Ein in diesem Zusammenhang weniger verbreiteter Begriff ist \emph{forecasting},
+Ein in diesem Zusammenhang weniger verbreiteter Begriff ist Forecasting,
 die Erstellung von Prognosen durch menschliche Beobachter. Im nächsten Abschnitt
 wird diese Form von Vorhersagen genauer beschrieben und anschließend mit
-\emph{predictive analytics} verglichen.  
+Predictive Analytics verglichen.  
 
 \section{Probleme menschlicher Urteile}
 
