--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -227,14 +227,15 @@ dessen Berechnung zusätzlich anhand von Beispielen erläutert wird. \\ \\
 Die Analyse der Ergebnisse der \emph{forecasting exercises} konnte Aufschluss
 darüber geben, welche Attribute der Teilnehmer einen Einfluss auf die
 Genauigkeit ihrer Vorhersagen haben und welche nicht. \\ \\
-Zu den Attributen, die keinen Einfluss auf die Fähigkeiten der Experten haben,
-gehören überraschenderweise (vgl. \cite{Tetlock}, S.~68):
-\begin{itemize}
-\item der Bildungsgrad (Doktortitel oder kein Doktortitel)
-\item das Fachgebiet
-\item die Erfahrung
-\item der Zugang zu geheimen Informationen
-\end{itemize}
+Zu den Attributen, die \emph{keinen} Einfluss auf die Fähigkeiten der Experten
+hatten, gehörten überraschenderweise (vgl. \cite{Tetlock}, S.~68):
+% TODO Punkte genauer ausführen
+\begin{description}
+\item[(a)] der Bildungsgrad (Doktortitel oder kein Doktortitel)
+\item[(b)] das Fachgebiet
+\item[(c)] die Erfahrung
+\item[(d)] der Zugang zu geheimen Informationen
+\end{description}
 Zudem hat Medienberühmtheit einen starken negativen Effekt auf die Fähigkeiten
 der Prognostiker (vgl. \cite{Tetlock}, S.~68). \\ \\
 Ein entscheidender Faktor, der gute von schlechte Prognostikern unterscheidet,
@@ -363,8 +364,58 @@ Modell in Abbildung~\ref{pic:Tetlock_2} bezeichnet.
  
 \subsection{Gründe für die schlechte Leistung der Experten}
 
+Auf Seite~\pageref{misc:Emp_Korr} wurden die Kriterien vorgestellt, nach denen
+Forecaster, Tetlocks Meinung folgend, bewertet werden müssen:
 
+\begin{description}
 
+\item[(1) Richtigkeit der Vorhersagen] \hfill \\
+Empirische Korrespondenztests werden beispielsweise mit Hilfe des Brier Scores
+durchgeführt.
+
+\item[(2) Logische Konsistenz des Denkmodells] \hfill \\
+Die Denkmodelle der Forecaster sollten konsistent mit den Gesetzen der Logik
+und Statistik sein.
+
+\end{description}
+
+Grundsätzlich ist Tetlock der Auffassung, dass die Experten bei den empirischen
+Korrespondenztests (1) schlecht abgeschnitten haben, weil ihre Denkmodelle
+nicht den Anforderungen der Gesetze der Logik und Statistik (2) gerecht wurden.
+Hierbei identifiziert Tetlock vier Prinzipien aus der
+Wahrscheinlichkeitstheorie, die befolgt werden müssen, um ein gutes
+Urteilsvermögen zu erlangen\footnote{
+Weitere Prinzipien, die identifiziert werden können, wären die logische und
+zeitliche Konsistenz des Gedankenmodells einer Person. Die logische Konsistenz
+kann erreicht werden, wenn die Glaubenssätze (Axiome) und Schlussfolgerungen,
+die eine Person zur Urteilsfindung nutzt, frei von formal logischen
+Widersprüchen sind. Die zeitliche Konsistenz ist gegeben, wenn die Person keinen
+Geschichtsrevisionismus betreibt, also nicht versucht, ihre  (falschen bzw.
+fehlerhaften) Urteile und Axiome nachträglich mit neuen Erkenntnissen zu
+versöhnen.
+
+Solche Prinzipien sollten prinzipiell auch beachtet werden, allerdings sind sie
+auch weiter verbreitet und werden aus diesen Gründen hier nicht so ausführlich
+behandelt.
+} (vgl. \cite{Tetlock}, S.~301-302):
+\begin{description}
+
+\item[Additive Regel (\emph{additive rule}):] \hfill \\
+...
+
+\item[Multiplikative Regel (\emph{multiplicative rule}):] \hfill \\
+...
+
+\item[Würdigung rivalisierender Weltsichten:] \hfill \\
+...
+
+\item[Glaubensanpassung (\emph{belief updating}):] \hfill \\
+...
+
+\end{description}
+Ausführlichere Erläuterungen zu den vier Prinzipien der logischen Konsistenz 
+befinden sich in Anhang~\xcom. Dort werden die relevanten Formeln vorgestellt 
+und es werden einige Beispiele präsentiert.  
 Die in der Wissenschaft geschätzte Fähigkeit, mit wenigen Grundregeln oder
 Axiomen auszukommen, scheint sich in eine Schwäche zu verwandeln, wenn
 es darum geht, Prognosen für die reale Welt zu erstellen (vgl. \cite{Tetlock},
@@ -375,52 +426,7 @@ lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
 Arbeit bestätigt.
 
 
-%-------------------------------------------------------------------------------
-Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
-nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
-Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
-(vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil keine
-genaue Abbildung der Realität beabsichtigt wird. Die Aufrechterhaltung von
-Glaubenssätzen, die zum kollektiven Zusammenhalt beitragen, hat höhere
-Priorität.
 
-In diesem Zusammenhang sind auch verschiedene Interpretationen des
-Wahrheitsbegriffs bedeutsam. Eine weit verbreitete Interpretation wird mit
-Hilfe des Pragmatismus von William James definiert. Demnach werden
-Aussagen von Menschen als Wahrheit akzeptiert, falls die Aussagen ihnen bei der
-Orientierung in der Welt nützlich sind. Dies liefert eine Erklärung dafür, dass
-Menschen dazu tendieren Aussagen zu glauben, die ihre eigene Weltsicht
-bestätigen. Bei einer extremen Ausprägung des pragmatischen Wahrheitsbegriffs
-wird aus der Nützlichkeit einer Aussage ihr Wahrheitsgehalt abgeleitet:
-\glqq{Es ist wahr, weil es nützlich ist}\grqq. (vgl. \cite{Precht})
-
-Diese radikale Wahrheitsinterpretation ist problematisch, wenn die als Wahrheit
-betrachteten Grundsätze der Realität widersprechen. Denn es gibt keine
-Möglichkeit, die Grundsätze mit Hilfe von empirischen oder logischen Beweisen
-zu revidieren und an die Realität anzupassen. Langfristig führen falsche
-Grundsätze somit zu schlechtem Urteilsvermögen, was wiederum zu schlechten
-Entscheidungen führt. Insbesondere sind Datenanalysen in einer solchen Situation
-nicht zweckdienlich, da Ergebnisse selektiv ignoriert oder abgelehnt werden.
-
-Eine andere Interpretation von Wahrheit legt großen Wert auf die Beweisbarkeit
-von Aussagen. Eine solche Interpretation ist beispielsweise in der Wissenschaft
-verbreitet. Aussagen wird erst dann ein Wahrheitswert zugewiesen, wenn
-unwiderlegbare Beweise für die Gültigkeit der Aussage vorhanden sind. Eine
-solche Interpretation weicht stark vom pragmatischen Standpunkt ab, kann aber
-ebenfalls problematisch werden. Es besteht die Gefahr sich bei der Prüfung von
-Aussagen in Kleinigkeiten zu verlieren, handlungsunfähig zu werden oder
-nützliche Erkenntnisse zu lange anzuzweifeln\footnote{
-Beispiele für Zweifel, die gefährlich werden, weil sie Fortschritt blockieren
-sind auf Seite~\xcom erläutert.
-}.
-
-Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
-notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
-auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
-Bedauerlicherweise gerät ein solcher Pragmatismus mit jeder, insbesondere
-politischen, Weltanschauung in Konflikt, die selbst nicht in dieser Art
-pragmatisch ist.
-%-------------------------------------------------------------------------------
 
 \begin{table}
 \centering
@@ -482,7 +488,7 @@ pragmatisch ist.
 }
 \end{table}
 
-\subsection{Auswirkungen von Tetlocks Forschungsergebnissen}
+\subsection{Nachwirkungen von Tetlocks Forschungsergebnissen}
 
 % TODO Zusammenfassung
 % - Brier Score: große Zahlen -> Evidence
